<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="contentdesc"></string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="Refresh" />
    <string name="NewTweet" />
    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>
    <string name="etComposeTweet">Enter your max 140 characters life moment.</string>
    <string name="bCancel">Cancel</string>
    <string name="bComposeTweet">Tweet</string>
    <string name="Hello">Hello.</string>
    <string name="Profile" />
    <string name="welcome">Welcome to Twitter.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>